# GraphVM

./: .gitignore  Cargo.toml  README.md  init-upstream.sh  parallel-revm-guide.md  ssa-revm-guide.md
bins/revme/: Cargo.toml
bins/revme/src/: cmd.rs
bins/revme/src/cmd/: parallel.rs
bins/revme/src/cmd/parallel/: parallel_runner.rs
bins/revme/src/cmd/statetest/models/: mod.rs
crates/interpreter/: Cargo.toml  interpreter_ssa_integration.md
crates/interpreter/src/: host.rs  instruction_result.rs  interpreter.rs  interpreter_action.rs  lib.rs
crates/interpreter/src/gas/: calc.rs
crates/interpreter/src/instructions/: arithmetic.rs  bitwise.rs  contract.rs  control.rs  data.rs  host.rs  host_env.rs  i256.rs  macros.rs  memory.rs  stack.rs  system.rs
crates/interpreter/src/instructions/contract/: call_helpers.rs
crates/interpreter/src/interpreter/: serde.rs  shared_memory.rs
crates/interpreter/src/interpreter_action/: ssa_conversion.rs
crates/precompile/: Cargo.toml
crates/primitives/src/: bytecode.rs  constants.rs  env.rs  state.rs
crates/revm/: Cargo.toml  OCCDA.md  revm_ssa_integration.md
crates/revm-benchmarks/: Cargo.toml  README.md
crates/revm-benchmarks/benches/: keccak_bench.rs  revm_ssa_bench.rs  ssa_add_bench.rs  uniswap_json_bench.rs  uniswap_parallelism_analysis.rs
crates/revm-benchmarks/src/: lib.rs
crates/revm-benchmarks/src/benches/: mod.rs  revm_ssa_bench.rs
crates/revm-benchmarks/tests/: test_parallel_execution.rs
crates/revm-ssa/: Cargo.toml  README.md
crates/revm-ssa-graph/: Cargo.toml  README.md
crates/revm-ssa-graph/benches/: simple_bench.rs  ssa_graph_bench.rs
crates/revm-ssa-graph/src/: context.rs  executor.rs  graph.rs  instruction_table.rs  lib.rs  macros.rs  memory.rs  tracer.rs
crates/revm-ssa-graph/src/instructions/: arithmetic.rs  bitwise.rs  contract.rs  control.rs  host.rs  host_env.rs  i256.rs  memory.rs  mod.rs  stack.rs  stack.rs_bak  system.rs  utils.rs
crates/revm-ssa-graph/tests/: mod.rs
crates/revm-ssa/src/: basic_block_types.rs  call_types.rs  lib.rs  logger.rs  shadow_stack.rs  types.rs  utils.rs
crates/revm/src/: access_tracker.rs  builder.rs  context.rs  dag.rs  db.rs  evm.rs  graph_wrapper.rs  handler.rs  journaled_state.rs  lib.rs  occda copy.rs  occda.rs  parallel_evm.rs  profiler.rs  ssa_access_tracker.rs  task.rs
crates/revm/src/context/: evm_context.rs  inner_evm_context.rs
crates/revm/src/db/: parallel_db.rs  unsafe_db.rs
crates/revm/src/db/states/: bundle_state.rs  cache.rs  cache_account.rs  state.rs
crates/revm/src/handler/handle_types/: post_execution.rs  pre_execution.rs
crates/revm/src/handler/mainnet/: execution.rs  post_execution.rs  pre_execution.rs
crates/revm/src/inspector/: eip3155.rs
crates/revm/src/optimism/: handler_register.rs  l1block.rs
crates/revm/tests/: mod.rs
crates/typed-graph/: Cargo.toml
crates/typed-graph/src/: context.rs  lib.rs  ssa_converter.rs  typed_graph.rs
crates/typed-graph/src/instructions/: arithmetic.rs  bitwise.rs  contract.rs  control.rs  host.rs  host_env.rs  macros.rs  memory.rs  mod.rs  system.rs  types.rs
crates/typed-graph/tests/: integration_tests.rs
data/: erc20_runtime.rt.hex  uniswap-t100-c20.json  weth.rt.hex
examples/: fork_ref_transact.rs  uniswap_v2_usdc_swap.rs
