[workspace]
members = [
    "bins/revme",
    "bins/revm-test",
    "crates/revm",
    "crates/primitives",
    "crates/interpreter",
    "crates/precompile",
    "crates/revm-ssa",
    "crates/revm-ssa-graph",
]
resolver = "2"
default-members = ["crates/revm"]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
lto = true
codegen-units = 1
debug = true
link-args = ["-Wl,-stack_size,0x800000"]

[profile.dev]
link-args = ["-Wl,-stack_size,0x800000"]

[profile.ethtests]
inherits = "test"
opt-level = 3
