[package]
name = "revm-ssa"
version = "1.0.0"
edition = "2021"
description = "SSA (Static Single Assignment) analysis for REVM"
license = "MIT"

[dependencies]
revm-primitives = { path = "../primitives", version = "15.2.0", default-features = false }
derive-where = { version = "1.2.7", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
hashbrown = { version = "0.15.2", default-features = false }
smallvec = { version = "1.10", features = ["serde"] }
metrics = "0.21.1"

[features]
default = ["std", "serde"]

std = [
    "serde?/std",
    "revm-primitives/std",
]
serde = ["dep:serde", "revm-primitives/serde"]
