[package]
name = "typed-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
revm-primitives = { path = "../primitives" }
revm-interpreter = { path = "../interpreter" }
revm-ssa = { path = "../revm-ssa" }
revm-precompile = { path = "../precompile" }
revm = { path = "../revm" }
metrics = { version = "0.21.1", optional = true}
bumpalo = "3.12.0"

[features]
metrics = ["dep:metrics"]